[package]
name = "heap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "heaps"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = {version = "0.4.0", features = ["html_reports"]}

[[bench]]
name = "benchmark"
harness = false
